// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegendItem:  renders the Hibana version of \`LegendItem\` when Hibana is enabled 1`] = `
<OGLegendItem
  breadcrumb={false}
  count={2}
  fill="#000"
  hovered={true}
  name="name"
  onClick={[MockFunction]}
  otherHovered={true}
>
  children
</OGLegendItem>
`;

exports[`LegendItem:  renders the OG version of \`LegendItem\` when Hibana is not enabled 1`] = `
<OGLegendItem
  breadcrumb={false}
  count={2}
  fill="#000"
  hovered={true}
  name="name"
  onClick={[MockFunction]}
  otherHovered={true}
>
  children
</OGLegendItem>
`;

exports[`LegendItem:  should render breadcrumb 1`] = `
<OGLegendItem
  breadcrumb={true}
  count={2}
  fill="#000"
  hovered={true}
  name="name"
  onClick={[MockFunction]}
  otherHovered={true}
>
  children
</OGLegendItem>
`;
